--- a/__DOM__/counter.html
+++ b/__DOM__/counter.html
@@ -21,11 +21,10 @@
         console.log('증가:', number)
         result.innerText = number
     }
-    
 
     const clickMinus = () => {
         number = parseInt(number) - 1
-        const decrement = document.querySelector(".minus")
+        const decrement = document.querySelector(".minus").click()
         console.log("감소:", number)
         result.innerText = number
     }
