--- a/__DOM__/221109/1.html
+++ b/__DOM__/221109/1.html
@@ -10,10 +10,11 @@
     <input type="submit" value="제출" />
 </body>
 <script>
-    const prohibition = document
-    .querySelector("input")
-    .addEventListener("click", function(e){
-        e.preventDefault()
-    })
+    console.log("first")
+    setTimeout(function ab(){
+        console.log("second")
+    }, 1000)
+
+    console.log("third")
 </script>
 </html>
