--- a/__DOM__/231115/comment.html
+++ b/__DOM__/231115/comment.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>
-        value: 
-        <span id="counter"></span>
-    </h1>
-    <button id="increment"> + </button>
-    <button id="decrement"> - </button>
-</body>
-<script type="text/javascript">
-    const display = document.querySelector("#counter")
-    const incrementBtn = document.querySelector("#increment")
-    const decrementBtn = document.querySelector("#decrement")
-
-    let num = 0
-    display.innerHTML = num
-
-    function handler(e){
-        display.innerHTML = e.target.id === "increment" ? ++num : --num
-    }
-
-    incrementBtn.addEventListener("click", handler)
-    decrementBtn.addEventListener("click", handler)
-</script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link href="./public/css/index.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div>
+            <ul class="comment">
+                <li class="comment-form">
+                    <form id="commentFrm">
+                        <h4>
+                            댓글쓰기
+                            <span></span>
+                        </h4>
+                        <span class="ps_box">
+                            <input type="text" placeholder="댓글 내용을 입력해주세요." class="int" name="content" />
+                        </span>
+                        <input type="submit" class="btn" value="등록" />
+                    </form>
+                </li>
+                <li id="comment-list"></li>
+            </ul>
+        </div>
+        <template id="commentRow">
+            <ul class="comment-row" data-index="1">
+                <li class="comment-id"></li>
+                <li class="comment-content"></li>
+                <li class="comment-date"></li>
+            </ul>
+        </template>
+        <template id="content-baisc">
+            <span class="comment-update-btn">입력입력입력~~~</span>
+            <span class="comment-delete-btn">❌</span>
+        </template>
+        <template id="content-update">
+            <span>
+                <input type="text" class="comment-update-input" data-value="" />
+            </span>
+            <span class="comment-delete-btn">❌</span>
+        </template>
+        <script src="./public/js/comment2.js" type="text/javascript"></script>
+    </body>
 </html>
