--- a/forEach/index.html
+++ b/forEach/index.html
@@ -10,15 +10,6 @@
     
 </body>
 <script>
-const arrayItems = ['item1', 'item2', 'item3']
-const copyItems = []
-console.log(arrayItems[0].length)
-// .length 문자열의 길이
-// console.log(arrayItems.length)
-for(let i=0; i<arrayItems.length; i++){
-    copyItems.push(arrayItems[i])
-}
-
-console.log(copyItems)
+array.map(callbackFunction(currentValue, index, array), thisArg)
 </script>
 </html>
