e.target.value와 document.querySelector.value의 차이

--- a/231115/comment.html
+++ b/231115/comment.html
@@ -11,11 +11,11 @@
     <div class="wallpaper">
         <div class="commentWrapper">
             <div id="result"> 댓글 </div>
-            <div id="addComment"> </div>
+            <div id="commentList"> </div>
             <form class="commentForm">
                 <input class="commentContent" type="text" placeholder="댓글을 입력해주세요." maxlength="200" />
                 <div class="submitWrapper">
-                    <button class="submitBtn" onclick="alert('저장되었습니다.')"> 댓글 남기기 </button>
+                    <input class="submitBtn" type="submit" onclick="alert('저장되었습니다.')" />
                 </div>
             </form>
             <div class="ment">
@@ -27,5 +27,5 @@
         </div>
     </div>
 </body>
-<script type="text/javascript" src="./public/js/comment2.js"></script>
+<script type="text/javascript" src="./public/js/comment3.js"></script>
 </html>
