--- a/231115/comment.html
+++ b/231115/comment.html
@@ -15,7 +15,7 @@
             <form class="commentForm">
                 <input class="commentContent" type="text" placeholder="댓글을 입력해주세요." maxlength="200" />
                 <div class="submitWrapper">
-                    <input class="submitBtn" type="submit" onclick="alert('저장되었습니다.')" />
+                    <button id="commentBtn"> 댓글 작성 </button>
                 </div>
             </form>
             <div class="ment">
@@ -26,6 +26,6 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="./public/js/comment5.js"></script>
 </body>
-<script type="text/javascript" src="./public/js/comment3.js"></script>
 </html>
