--- a/231117/index.html
+++ b/231117/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        <a href="/index.html"> 로고 </a>
+    </h1>
+    <a href="./board/list.html"> 게시판 리스트로 가기 </a>
 </body>
 </html>
