--- a/231117/index.html
+++ b/231117/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>메인페이지</title>
 </head>
 <body>
     <h1>
-        <a href="/index.html"> 로고 </a>
+        <a href="./index.html"> 로고 </a>
     </h1>
     <a href="./board/list.html"> 게시판 리스트로 가기 </a>
 </body>
